--- a/index.html
+++ b/index.html
@@ -39,32 +39,28 @@
     .logo {
       width: 80px;
       height: 80px;
-      background-image: url('logo.png'); /* Replace with actual logo path */
+      background-image: url('logo.png'); /* Replace with your actual logo */
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
       margin: 0 auto 20px;
-      opacity: 0;
-      animation: fadeIn 1s ease-in-out forwards;
     }
 
     h1 {
       font-size: 1.8rem;
       margin-bottom: 10px;
-      opacity: 0;
-      animation: fadeIn 1s ease-in-out 0.5s forwards;
     }
 
     .typing {
       font-size: 1rem;
       color: #bbbbbb;
+      margin: 20px 0;
+      height: 20px;
       overflow: hidden;
       white-space: nowrap;
       border-right: 2px solid #fff;
-      margin: 20px auto;
       width: 0;
-      opacity: 0;
-      animation: typing 3s steps(40, end) 1s forwards, blink 0.8s step-end infinite alternate;
+      animation: typing 2.5s steps(40, end) forwards, blink 0.8s step-end infinite alternate;
     }
 
     .btn {
@@ -78,9 +74,7 @@
       cursor: pointer;
       text-decoration: none;
       display: inline-block;
-      margin-top: 30px;
-      opacity: 0;
-      animation: fadeIn 1s ease-in-out 4s forwards;
+      margin-top: 25px;
       transition: background-color 0.3s ease;
     }
 
@@ -88,10 +82,12 @@
       background-color: #ff1e2c;
     }
 
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-      }
+    #countdown {
+      margin-top: 20px;
+      font-size: 0.95rem;
+      color: #ff5e5e;
+      font-weight: bold;
+      display: none;
     }
 
     @keyframes typing {
@@ -100,7 +96,6 @@
       }
       to {
         width: 260px;
-        opacity: 1;
       }
     }
 
@@ -111,10 +106,6 @@
     }
 
     @media (max-width: 500px) {
-      .card {
-        padding: 30px 20px;
-      }
-
       h1 {
         font-size: 1.5rem;
       }
@@ -122,6 +113,10 @@
       .typing {
         font-size: 0.9rem;
         width: 200px;
+      }
+
+      .card {
+        padding: 30px 20px;
       }
     }
   </style>
@@ -133,7 +128,30 @@
     <h1>Jalwa Games Prediction</h1>
     <p class="typing">Trusted & Smart Predictions for Winning Big</p>
     <a class="btn" href="https://t.me/yourchannel" target="_blank">Join on Telegram</a>
+    <div id="countdown">Redirecting in <span id="seconds">7</span>s...</div>
   </div>
+
+  <script>
+    // Countdown logic
+    let secondsLeft = 7;
+    const countdownText = document.getElementById("countdown");
+    const secondsSpan = document.getElementById("seconds");
+
+    // Show countdown after typing animation ends
+    setTimeout(() => {
+      countdownText.style.display = "block";
+
+      const interval = setInterval(() => {
+        secondsLeft--;
+        secondsSpan.textContent = secondsLeft;
+
+        if (secondsLeft === 0) {
+          clearInterval(interval);
+          window.location.href = "https://t.me/yourchannel"; // Replace with your Telegram link
+        }
+      }, 1000);
+    }, 3000); // delay to match typing animation
+  </script>
 
 </body>
 </html>
