--- a/index.html
+++ b/index.html
@@ -51,16 +51,66 @@
       margin-bottom: 10px;
     }
 
+    .typing-wrapper {
+      overflow: hidden;
+      position: relative;
+      height: 24px;
+      margin: 20px auto;
+      display: flex;
+      justify-content: center;
+    }
+
     .typing {
       font-size: 1rem;
       color: #bbbbbb;
-      margin: 20px 0;
-      height: 20px;
-      overflow: hidden;
       white-space: nowrap;
-      border-right: 2px solid #fff;
+      overflow: hidden;
+      position: relative;
+      letter-spacing: 1px;
+      max-width: 100%;
+    }
+
+    .typing::before,
+    .typing::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      height: 100%;
       width: 0;
-      animation: typing 2.5s steps(40, end) forwards, blink 0.8s step-end infinite alternate;
+      background: transparent;
+      animation: expandFromCenter 3s forwards;
+    }
+
+    .typing::before {
+      left: 50%;
+      transform: translateX(-50%);
+      border-right: 2px solid #fff;
+    }
+
+    .typing-text {
+      opacity: 0;
+      animation: fadeInText 3s forwards;
+    }
+
+    @keyframes expandFromCenter {
+      0% {
+        width: 0;
+      }
+      100% {
+        width: 100%;
+      }
+    }
+
+    @keyframes fadeInText {
+      0% {
+        opacity: 0;
+      }
+      40% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
     }
 
     .btn {
@@ -90,21 +140,6 @@
       display: none;
     }
 
-    @keyframes typing {
-      from {
-        width: 0;
-      }
-      to {
-        width: 260px;
-      }
-    }
-
-    @keyframes blink {
-      50% {
-        border-color: transparent;
-      }
-    }
-
     @media (max-width: 500px) {
       h1 {
         font-size: 1.5rem;
@@ -112,7 +147,6 @@
 
       .typing {
         font-size: 0.9rem;
-        width: 200px;
       }
 
       .card {
@@ -126,7 +160,13 @@
   <div class="card">
     <div class="logo"></div>
     <h1>Jalwa Games Prediction</h1>
-    <p class="typing">Trusted & Smart Predictions for Winning Big</p>
+
+    <div class="typing-wrapper">
+      <div class="typing">
+        <span class="typing-text">Agar Loss Hua Sara Paisa Wapis</span>
+      </div>
+    </div>
+
     <a class="btn" href="https://t.me/yourchannel" target="_blank">Join on Telegram</a>
     <div id="countdown">Redirecting in <span id="seconds">7</span>s...</div>
   </div>
@@ -137,7 +177,7 @@
     const countdownText = document.getElementById("countdown");
     const secondsSpan = document.getElementById("seconds");
 
-    // Show countdown after typing animation ends
+    // Show countdown after typing effect
     setTimeout(() => {
       countdownText.style.display = "block";
 
@@ -150,7 +190,7 @@
           window.location.href = "https://t.me/yourchannel"; // Replace with your Telegram link
         }
       }, 1000);
-    }, 3000); // delay to match typing animation
+    }, 3000); // 3s delay for typing animation
   </script>
 
 </body>
