--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ src="https://www.facebook.com/tr?id=4122349787987868&ev=PageView&noscript=1"
       </div>
     </div>
 
-    <a class="btn" href="https://t.me/yourchannel" target="_blank">Join on Telegram</a>
+    <a class="btn" href="https://t.me/+rUeSSR7uwo01MTRl" target="_blank">Join on Telegram</a>
     <div id="countdown">Redirecting in <span id="seconds">7</span>s...</div>
   </div>
 
@@ -204,7 +204,7 @@ src="https://www.facebook.com/tr?id=4122349787987868&ev=PageView&noscript=1"
 
         if (secondsLeft === 0) {
           clearInterval(interval);
-          window.location.href = "https://t.me/yourchannel"; // Replace with your Telegram link
+          window.location.href = "https://t.me/+rUeSSR7uwo01MTRl"; // Replace with your Telegram link
         }
       }, 1000);
     }, 3000); // 3s delay for typing animation
